--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
 
     <link rel="stylesheet" href="style.css" />
 
@@ -57,6 +56,8 @@
           <button class="form__btn">OK</button>
         </form>
 
+
+        
         <!-- <li class="workout workout--running" data-id="1234567890">
           <h2 class="workout__title">Running on April 14</h2>
           <div class="workout__details">
